# Gerald-starter-kit

./: .env.example  .gitignore  AGENTS.md  BOOTSTRAP.md  BOUNDARIES.md  BUSINESS-MEMORY.md  GERALD-SANDBOX-SETUP.md  HEARTBEAT.md  IDENTITY.md  KIMI-GUIDANCE.md  KIMI-SETUP.md  LOGBOOK.md  MEMORY.md  README.md  RECALL-AUTO-RUN.md  RECALL-LIMITS.md  SECURITY-CHECKLIST.md  SECURITY.md  SELF-IMPROVEMENT.md  SOUL.md  TASKS.md  TOOL-FIX-VALIDATION.md  TOOL-USE.md  TOOLS.md  USER.md  WORKFLOW.md  X-CALLBACK-SETUP.md  X-GROWTH-LOOP.md  X-LEAD-PLAN.md  X-OAUTH-TROUBLESHOOTING.md  YOUTUBE-WORKFLOW.md  openclaw-gerald-sandbox.json
gerald/: .env.example  .gitignore  README.md  pyproject.toml  run
gerald/app/: __init__.py  config.py  constants.py  db.py  logging.py  models.py  schemas.py  structured_output.py
gerald/app/cli/: __init__.py  main.py
gerald/app/clients/: __init__.py  anthropic_client.py  x_client.py
gerald/app/prompts/: daily_digest.txt  follow_up_reply_question.txt  outreach_dm.txt  outreach_email.txt  prospect_summary.txt  scoring_rationale.txt  signal_extraction.txt
gerald/app/repositories/: __init__.py  contact_history.py  drafts.py  interactions.py  opportunities.py  pipeline_runs.py  posts.py  prospect_run_states.py  prospects.py  signals.py
gerald/config/: discovery_queries.json
gerald/scripts/: LAUNCHD.md  com.gerald.run-autonomous.plist.example  reply_to_tweet.py  run-autonomous-daily.sh  test_reply_endpoint.py
gerald/tests/: test_drafting.py  test_scoring.py  test_send_service.py  test_signal_parsing.py  test_structured_output.py
tools/: cso.py  (+65 more)
(+144 files in other folders)
